Made images appear on screen

--- a/Photopgropher-site/style.css
+++ b/Photopgropher-site/style.css
@@ -42,7 +42,7 @@ h1,h2,a{
 }
 
 .head-wrapper{
-    background-image: url(/Images/jahmir.jpeg);
+    background-image: url(/Photopgropher-site/Images/jahmir.jpeg);
     filter: grayscale(40%);
     height: 100vh;
     background-size: cover;
