--- a/thanks.css
+++ b/thanks.css
@@ -1,46 +1,51 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.header{
-    
-    filter: grayscale(40%);
-    height: 100vh;
-    position: relative;
-    z-index: 503;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    background-color: black;
+.header {
+  filter: grayscale(40%);
+  height: 100vh;
+  position: relative;
+  z-index: 503;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: black;
 }
 
-.header img{
-    object-fit: cover;
-    opacity: .5;
-    border: none;
-    
+.header img {
+  object-fit: cover;
+  opacity: 0.5;
+  border: none;
 }
 
-.header label{
-    font-size: xx-large;
-    font-weight: 900;
-    opacity: .9;
-    position: absolute;
-    color: white;
-    text-align: center;
+.header label {
+  font-size: xx-large;
+  font-weight: 900;
+  opacity: 0.9;
+  position: absolute;
+  color: white;
+  text-align: center;
 }
-.center{
-    text-align: center;
+.center {
+  text-align: center;
 }
 
-.header a{
-    color: white;
-    margin-left: 2vw;
+.header a {
+  color: white;
+  margin-left: 2vw;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
